src/public/css/input.css
@import 'tailwindcss';

@tailwind base;
@tailwind utilities;

@theme {
    /* Backgrounds */
    --color-body: var(--bg-body);
    --color-surface: var(--bg-surface);
    --color-wrapper: var(--bg-wrapper);
    --color-thead: var(--bg-thead);
    --color-input: var(--bg-input);
    --color-checkbox: var(--bg-checkbox);
    --color-toast: var(--bg-toast);
    --color-icon-hover: var(--icon-hover);

    --color-dropdown: var(--bg-dropdown);
    --color-dropdown-selected: var(--bg-dropdown-selected);

    --color-navbar: var(--bg-navbar);
    --color-toggle-theme: var(--bg-toggle-theme);
    --color-bg-hover: var(--bg-hover);
    --color-bg-selected: var(--bg-selected);

    --color-reload-btn: var(--bg-reload-btn);

    /* Text */
    --color-text-title: var(--text-title);
    --color-text-primary: var(--text-primary);
    --color-text-secondary: var(--text-secondary);
    --color-text-muted: var(--text-muted);

    /* Border */
    --color-border: var(--border);
    --color-border-input: var(--border-input);
    --color-border-checkbox-hover: var(--border-checkbox-hover);
}

/* Theme Variables */
:root {
    /* Dark Theme colors */
    --dark-900: #14171c;
    --dark-800: #282e38;
    --dark-750: #323a45;
    --dark-700: #3c4653;
    --dark-600: #505d6f;
    --dark-500: #64748b;
    /* Light Theme Colors */
    --light-100: #f8fafc;
    --light-200: #e2e8f0;
    --light-300: #cbd5e1;
    --light-400: #94a3b8;
    --light-500: #64748b;

    --blue-100: #eef5ff;
    --blue-200: #BBFBFF;
    --blue-300: #8DD8FF;
    --blue-400: #46A9FD;
    --blue-500: #007bfc;

    /* Base Theme Variables - Light Mode Default */
    --color-primary: #60a5fa;
    --color-success: #22c55e;    /* green-500 */
    --color-warning: #eab308;    /* yellow-500 */
    --color-error: #ef4444;      /* red-500 */
    --color-info: #3b82f6;       /* blue-500 */
}

[data-theme="light"] {
    /* Background Colors */
    --bg-body: var(--blue-100);
    --bg-surface: var(--blue-200);
    --bg-wrapper: var(--blue-300);
    --bg-thead: var(--blue-500);
    --bg-input: #F5F0CD;
    --bg-dropdown: #FADA7A;
    --bg-checkbox: #F5F0CD;
    --bg-toast: var(--blue-400);

    --bg-navbar: var(--light-100);
    --bg-toggle-theme: var(--blue-400);
    --bg-hover: hsl(from var(--bg-surface) h s calc(l - 10));
    --bg-selected: hsl(from var(--bg-surface) h s calc(l - 20));

    --bg-reload-btn: #FAC01A;

    /* Text Colors */
    --text-title: #007BFC;
    --text-primary: var(--light-100);
    --text-secondary: var(--dark-800);
    --text-muted: var(--light-400);

    --icon-hover: hsl(from var(--text-secondary) h s calc(l - 10));

    /* Border Colors */
    --border: var(--light-400);
    --border-input: var(--light-400);
    --border-checkbox-hover: var(--light-500);

    --logo-ring: #FAC01A; 
    --logo-inner: #000000;

    --highlight-brightness: 80%;

    #theme-toggle-slider {
        transform: translateX(26px);
    }
}

/* Dark Theme */
[data-theme="dark"] {
    /* Background Colors */
    --bg-body: var(--dark-900);
    --bg-surface: var(--dark-800);
    --bg-wrapper: var(--dark-700);
    --bg-thead: var(--dark-700);
    --bg-input: var(--dark-600);
    --bg-dropdown: var(--dark-800);
    --bg-checkbox: var(--dark-750);
    --bg-toast: hsl(from var(--bg-surface) h s calc(l + 5));

    --bg-navbar: #1e293b;
    --bg-toggle-theme: var(--dark-500);
    --bg-hover: hsl(from var(--bg-surface) h s calc(l + 5));
    --bg-selected: hsl(from var(--bg-surface) h s calc(l + 10));

    --bg-reload-btn: var(--blue-500);

    /* Text Colors */
    --text-title: #4aa3ff;
    --text-primary: #f3f4f6;
    --text-secondary: #f3f4f6;
    --text-muted: #9ca3af;

    --icon-hover: hsl(from var(--text-secondary) h s calc(l + 10));

    /* Border Colors */
    --border: var(--dark-600);
    --border-input: var(--dark-500);
    --border-checkbox-hover: var(--dark-500);

    --logo-ring: #053fe5; 
    --logo-inner: #e2e2e4;

    --highlight-brightness: 120%;
}

/* Custom base styles */
@layer base {
    input[type="text"],
    input[type="number"],
    input[type="password"],
    textarea {
        @apply bg-input text-text-secondary border border-2 border-border-input rounded-lg px-3 py-2 placeholder-gray-400 focus:outline-none focus:border-none focus:ring-2 focus:ring-blue-500 w-full;
    }

    /* Hides the arrows in Chrome, Safari, Edge */
    input[type='number']::-webkit-inner-spin-button,
    input[type='number']::-webkit-outer-spin-button {
        @apply appearance-none;
        margin: 0;
    }

    textarea {
        @apply min-h-52 resize-none;
    }

    h1 {
        @apply text-text-title text-xl
    }

    .scrollbar-dark::-webkit-scrollbar {
        width: 8px;
        position: relative;
    }

    .scrollbar-dark::-webkit-scrollbar-track {
        background-color: var(--color-dark-700);
        border-top: none;
        border-radius: 100vw;
        margin-block: .3em;
    }

    .scrollbar-dark::-webkit-scrollbar-thumb {
        background-color: var(--color-dark-800);
        border-radius: 100vw;
        cursor: pointer;
    }

    .scrollbar-dark::-webkit-scrollbar-thumb:hover {
        background-color: var(--color-dark-900); /* on hover */
    }

    body::-webkit-scrollbar-track,
    body::-webkit-scrollbar-thumb {
        border-radius: 0;
        margin: 0px;
    }

    .selected-row {
        @apply bg-bg-selected;
    }
}

/* Toast Animations */
@layer utilities {
    @keyframes fade-in {
        from {
            opacity: 0;
            transform: translateY(-10px);
        }
        to {
            opacity: 1;
            transform: translateY(0);
        }
    }

    @keyframes fade-out {
        from {
            opacity: 1;
            transform: translateY(0);
        }
        to {
            opacity: 0;
            transform: translateY(-10px);
        }
    }

    .float-in {
        animation: fade-in 0.3s ease-out forwards;
    }

    .float-out {
        animation: fade-out 0.3s ease-in forwards;
    }

    .loader {
        width: 48px;
        height: 48px;
        border: 5px solid #FFF;
        border-bottom-color: #FF3D00;
        border-radius: 50%;
        display: inline-block;
        box-sizing: border-box;
        animation: rotation 1s linear infinite;
    }

    @keyframes rotation {
        0% {
            transform: rotate(0deg);
        }
        100% {
            transform: rotate(360deg);
        }
    } 
}

